<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/linearLayout">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:fontFamily="@font/pt_sans_regular"
                    android:letterSpacing="0.08"
                    android:textColor="@color/colorTextGray"
                    android:layout_centerInParent="true"
                    android:text="@string/text_stream_playing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="21dp"
                    app:srcCompat="@drawable/ic_play_arrow" android:id="@+id/btn_radio"/>
        </RelativeLayout>
    </LinearLayout>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/photo"
            android:id="@+id/imageView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/linearLayout3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:background="@drawable/header_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:id="@+id/linearLayout3">
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginEnd="16dp"
            android:id="@+id/linearLayout4">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/colorMusicTheme"
                    android:textSize="16sp"
                    tools:text="@string/text_music_theme"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" android:id="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">
        <TextView
                tools:text="@string/text_song_name"
                android:textAlignment="center"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="12sp"
                android:textColor="#333333"
                android:lineSpacingExtra="10sp"
                android:lineSpacingMultiplier="1.0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tv_track_title"/>
        <TextView
                tools:text="@string/text_band_name"
                android:textSize="10sp"
                android:fontFamily="@font/pt_sans_regular"
                android:textAlignment="center"
                android:lineSpacingMultiplier="1.0"
                android:lineSpacingExtra="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tv_track_performer"/>
    </LinearLayout>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_equalizer"
            android:id="@+id/imageView4"
            android:alpha="0.4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
            app:layout_constraintTop_toTopOf="@+id/linearLayout6"/>
    <ImageView
            android:layout_width="wrap_content"
            android:alpha="0.4"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_thumb_down"
            android:id="@+id/imageView5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/linearLayout6"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="48dp" android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="64dp"
            android:id="@+id/linearLayout7">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/text_history_tracks"
                    android:fontFamily="@font/pt_sans_regular"
                    android:textSize="12sp"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorTextGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView5"/>
        </RelativeLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:overScrollMode="never"
            tools:listitem="@layout/item_track"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/list_track_history"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>